--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -39,6 +39,7 @@
 html {
   font-size: 100%; // 100% = 16px, 1rem = 16px
   height: 100%;
+  background-color: var(--background_darkTobackground_light);
 }
 
 body {
