--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -45,6 +45,7 @@ html {
 body {
   font-family: 'Inter', sans-serif;
   height: 100%;
+  overflow-x: hidden;
 }
 
 #root {
@@ -151,4 +152,65 @@ input[type='number'] {
 
 style {
   display: none !important;
+}
+
+.background-enter {
+  transform: translate(100%);
+}
+.background-enter.background-enter-active {
+  transform: translate(0%);
+  transition: transform 1000ms ease-in-out;
+}
+.background-leave {
+  transform: translate(0%);
+}
+.background-leave.background-leave-active {
+  transform: translate(-100%);
+  transition: transform 1000ms ease-in-out;
+}
+
+.fade-next-enter > div {
+  opacity: 0;
+  transform: translateX(100%);
+}
+.fade-next-enter-active > div {
+  opacity: 1;
+  transform: translateX(0%);
+}
+.fade-next-exit > div {
+  opacity: 1;
+  transform: translateX(0%);
+}
+.fade-next-exit-active > div {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+.fade-next-enter-active > div,
+.fade-next-exit-active > div {
+  transition:
+    opacity 500ms,
+    transform 500ms;
+}
+
+.fade-pre-enter > div {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+.fade-pre-enter-active > div {
+  opacity: 1;
+  transform: translateX(0%);
+}
+.fade-pre-exit > div {
+  opacity: 1;
+  transform: translateX(0%);
+}
+.fade-pre-exit-active > div {
+  opacity: 0;
+  transform: translateX(100%);
+}
+.fade-pre-enter-active > div,
+.fade-pre-exit-active > div {
+  transition:
+    opacity 500ms,
+    transform 500ms;
 }
