--- a/src/styles/libs/_dialog.scss
+++ b/src/styles/libs/_dialog.scss
@@ -1,6 +1,6 @@
 .simplize-dialog {
   box-sizing: border-box;
-  padding: 0 0 24px;
+  // padding: 0 0 24px;
   color: #000000d9;
   font-size: 14px;
   font-variant: tabular-nums;
